--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -73,20 +73,20 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+    <li>C & C++</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>Astro</li>
+    <li>React</li>
+    <li>DS Algo</li>
+    <li>TailwindCSS</li>
+    <li>Bootstrap</li>
+    <li>Web Design</li>
+    <li>UI Design</li>
+    <li>Illustrator</li>
+    <li>After Effects</li>
+    <li>Photoshop</li>
+    <li>Logo Design</li>
   </ul>
 </BaseLayout>
