--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -5,14 +5,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 <BaseLayout title="Resume" sideBarActiveItemID="cv">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-3xl w-full font-bold">Career Objective</div>
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    To get an opportunity where I can make the best use of my potential, creativity and explore enormous number of things and contribute to the organization’s growth.
+
   </div>
 
   <div class="mb-5">
@@ -21,12 +19,16 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Bachelor of Technology (Information Technology)"
+      subtitle="2021 to 2025 at Acropolis Institute of Technology and Research, Indore, India"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Higher Secondary (12th MP Board)"
+      subtitle="2021 at M.P. Public Higher Secondary School, Mandsaur, India"
+    />
+    <TimeLineElement
+      title="Senior Secondary (10th MP Board):"
+      subtitle="2018 at M.P. Public Higher Secondary School, Mandsaur, India"
     />
   </div>
 
@@ -36,22 +38,34 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Co-Lead at GDSC AITR"
+      subtitle="[Aug 2023 – Present at Google Developer Student Club]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      .
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Graphic Designer at GDSC AITR"
+      subtitle="[AUG 2022 – AUG 2023] at Google Developer Student Club"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      .
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Video Editor at GDSC WOW 2023"
+      subtitle="[JAN 2023 - APRIL 2023] at Google Developer Student Club"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      .
+    </TimeLineElement>
+    <TimeLineElement
+      title="Video Editor at SFSG AITR"
+      subtitle="[AUG 2022 - JULY 2023] at Salesforce Student Club"
+    >
+      .
+    </TimeLineElement>
+    <TimeLineElement
+      title="Video Editor at Acropolis Blockchain Club"
+      subtitle="[FEB 2023 - AUG 2023] at Salesforce Student Club"
+    >
+      .
     </TimeLineElement>
   </div>
 
@@ -61,10 +75,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="https://certificate.codingninjas.com/verify/bbb7d7b648aef9bd" target="_blank"> Introduction to C++ (Tap here)</a>
     </li>
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="https://certificate.codingninjas.com/verify/75902f9e7263e83a" target="_blank"> Data Structures & Algorithm (Tap here)</a>
     </li>
   </ul>
 
