--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,7 @@ const last_posts = posts.slice(0, 3);
     <div class="text-3xl py-3 font-bold">Web Developer & Graphic Designer</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        "<b>Welcome to my portfolio!</b> I'm a <b>Web Developer</b> and <b>Graphic Designer</b> passionate about crafting seamless digital experiences. Explore my projects showcasing expertise in front-end development, UI/UX design, and custom graphics. Using frontend technologies, I create fast, modern websites. Let's collaborate on your next digital venture!"
       </text>
     </div>
     <div class="mt-8">
@@ -28,7 +26,7 @@ const last_posts = posts.slice(0, 3);
     </div>
   </div>
 
-  <div>
+  <!-- <div>
     <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
   </div>
 
@@ -74,4 +72,4 @@ const last_posts = posts.slice(0, 3);
       </>
     ))
   }
-</BaseLayout>
+</BaseLayout> -->
