--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -63,7 +63,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     </TimeLineElement>
     <TimeLineElement
       title="Video Editor at Acropolis Blockchain Club"
-      subtitle="[FEB 2023 - AUG 2023] at Salesforce Student Club"
+      subtitle="[FEB 2023 - AUG 2023] at Acropolis Blockchain Club"
     >
       .
     </TimeLineElement>
