--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
+import Profile from "../../public/Profile.png";
+import { Image } from "@astrojs/image/components";
 
 const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 
@@ -10,6 +12,7 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
+    <Image class="mask mask-circle lg:hidden" aspectRatio="1:1" format="webp" width={300} height={300} src="/Profile.png" alt="Profile image" />
     <div class="text-xl py-1">Hey there 👋</div>
     <div class="text-5xl font-bold">I'm Kapil Rathore</div>
     <div class="text-3xl py-3 font-bold">Web Developer & Graphic Designer</div>
@@ -71,5 +74,5 @@ const last_posts = posts.slice(0, 3);
         <div class="divider my-0" />
       </>
     ))
-  }
-</BaseLayout> -->
+  }  -->
+</BaseLayout>
